--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
@@ -63,7 +63,7 @@
 <div class="container">
   <div class="page-header">Alpha Kappa Psi</div>
   <div class="row">
-    <div class="image"><img src="http://placehold.it/400x250"></div>
+    <div class="image"><img src="https://wmich.collegiatelink.net/images/native/0/noshadow/General/3ffb5e16f26f47c3a03a1f01703567b6.jpg" alt="shapingpeople" width="" height="" class="img-responsive"></div>
   </div>
 </div>
 
@@ -71,10 +71,12 @@
 <div class="padding"></div>
 
 <div class="container">
-    <p>As an international professional business fraternity, Alpha Kappa Psi aims to... jdka;jfk lkja dk;lfaj sdl;kf alk;sdjf a;lkjd flka;jd f;klaj dlfkj a;lksdjf a;lksdjf akljdf akl;djf aklsdj faksdjfl;kas jdkf;lasdlkfj a;kldjf akldjf al;ksdjf a;lksdjf a;klsdjf a;sldkfj<br>Fraternity facts:</p>
+    <p>Alpha Kappa Psi was founded at New York University on October 5, 1904 and later incorporated on May 20, 1905. As an international professional business fraternity, Alpha Kappa Psi aims to educate the public and to further the welfare of its members. With over 240,000 initiated brothers, Alpha Kappa Psi is the largest co-ed professional fraternity with over 300 collegiate chapters in the US, Canada, UK and Hong Kong. The organization is currently headquartered in Indianpolis at the Heritage Center, where the fraternity's staff works. The Heritage Center is also home to the fraternity's own philanthropical organization, the Alpha Kappa Psi Foundation.<br>Fraternity facts:</p>
     <ul>
       <li>Membership: 240,000 members world-wide</li>
       <li>Chapters: 300+ chapters</li>
+      <li>Colors: Navy and Gold</li>
+      <li>Symbol: Phoenician Galley</li>
       <li>Tagline: Shaping people, shaping business</li>
       <li>Vision: Alpha Kappa Psi is recognized as the premier developer of principled business leaders</li>
       <li>Core Values: Brotherhood, Knowledge, Integrity, Service, Unity</li>
