--- a/alphalambda.html
+++ b/alphalambda.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
@@ -62,11 +62,13 @@
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Alpha Lambda Chapter</div>
-    <p>The Alpha Lambda Chapter at Washington University in St. Louis is the 34th chapter of AKPsi. We welcome students from all undergraduate programs.... aj;lkda fkaljdkl;af dkal;fdkja ;fkldja; kldfj a;lkdjf aklsdjf;ak jdfka;j dfk;a djfka;d kfja ;kldsfj akldjf ;aljsdfk d;alkdj fa;lkdj fkd;akd;afj ;kj fa sdjkf; alkdj fja;dklfj a;kldj f</p>
-    <div class="subsection-header">Our Awards</div>
-      <p>Our awards from nationals 1, 2, 3...</p>
-    <div class="subsection header">Brotherhood Statistics</div>
-      <iframe width=600 height=1987 frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/5330921-untitled-report"></iframe>
+    <p>The Alpha Lambda Chapter at Washington University in St. Louis became the 34th Chapter of Alpha Kappa Psi on May 16, 1923. Since our installation, we have graduated over 500 members. We welcome students from all undergraduate programs, which has created a diverse network of young professionals with a common interest in business. Our chapter is held to the highest standards, and we are proud of our leadership and involvement throughout a variety of organizations and events on and off campus.</p>
+
+  <div class="padding"></div>
+  <div class="padding"></div>
+
+    <p>Have you ever wondered who makes up Alpha Kappa Psi at Washington University? Learn more about our brotherhood with a diverse set of interests, skills, majors and minors!</p>
+    <iframe width=600 height=1987 frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/5330921-untitled-report"></iframe>
 </div>
 
 <!-- Body End -->
