--- a/alumni.html
+++ b/alumni.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
@@ -77,7 +77,7 @@
   </div>
 
   <div class="col-md-12">
-  <p>Please contact our VP of Alumni Relations Morgan Hess at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">morganhess@wustl.edu</a> for any questions or inquiries.</p>
+  <p>Please contact our VP of Alumni Relations Morgan Hess at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">wu.akpsi@gmail.com</a> for any questions or inquiries.</p>
   </div>
 </div>
 <!-- Body End -->
