--- a/brothers.html
+++ b/brothers.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
@@ -210,6 +210,7 @@
     <div class="subsection-header">Class of 2017</div>
       <ul style="list-style-type:none">
         <li>Shrey Aggarwal</li>
+        <li>Arvind Balasundaram</li>
         <li>Brooke Barrow</li>
         <li>Ryan Becker</li>
         <li>Rebecca Benson</li>
