--- a/careers.html
+++ b/careers.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
@@ -64,11 +64,56 @@
 <div class="page-header">AKPsi Careers</div>
   <div class="col-md-12">
     <div class="section-header">Join the World's Largest Professional Network</div>
-      <p>Our professional network ;alkdj faklsdj fakl;djf al;kdsfj al;djfkl;akdjf a;lksdj f;lakjd f;alkjdf ;alkjd fkaljdf a;lksdjf ;lkajsdf a;lkjd f;alkjsd f;lakjsd fa;lksjd f;alksjdf a;lksdjf a;lkjsdf al;kjsd f;lksaj ;lfkasdjfl;ajdf ;</p>
+      <p>Alpha Kappa Psi's extensive professional network provides a wide range of connections and advantage in the job market. As the world's largest business fraternity, </p>
     <div class="section-header">Our Professional Events</div>
       <p>These are some of our most recent professional events alkjd a;lf jal;kd fjal; dsfjlka;d fjipowqenv kruqi jfkld;aufeoinf l;kajpiojwkflj   p;akjdpfique fpoijdkapfieoqu jkd;al ufqipeoifj afpij qieojf apiodjf ajsdf pqoiwej ffjda; ufoia fjapsjf dioa</p>
     <div class="section-header">Companies We Work For</div>
-      <p>Include icons of many of the major companies we have worked for in the past 3 graduating classes af ;lkadj f;al fldsjka f;lkadj f;laj fdk;lajf ;ladj f;aljd f;lakjd f;lajksd flk;aj d;lkfja ;lsdkfj a;lkjd flka;jdf alk;dsjf a;l jkl;das;fla fl;akjd ;salfjk a;slj dklf ld;ajkf a;l</p>
+      <div class="row">
+        <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="https://s3.amazonaws.com/image.infoarmy/1398306725083.png" alt="zsassociates">
+        </div>
+        </div>
+
+        <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://static1.squarespace.com/static/53811f41e4b0f219e1f7144c/53c050bee4b06790c08012d1/53c05166e4b03b9c179f4ce1/1405112678368/bloomingdales.png" alt="bloomingdales">
+        </div>
+        </div>
+
+        <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://www.askeachother.com/images/uploads/large/2011-04-08-4313023_Bank-of-America-2000.png" alt="bankofamerica">
+        </div>
+        </div>
+
+        <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://1.bp.blogspot.com/-8a4nlXTIA28/TqRW2I_wCjI/AAAAAAAAgkc/k9HvgGn3K_U/s1600/delta_airlines_logo9.png" alt="deltaairlines">
+        </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3"><img src="" alt="anheuserbusch"></div>
+        <div class="col-md-3"><img src="" alt="razorfish"></div>
+        <div class="col-md-3"><img src="" alt="amazon"></div>
+        <div class="col-md-3"><img src="" alt="pandg"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3"><img src="" alt="prudentialcapitalgroup"></div>
+        <div class="col-md-3"><img src="" alt="thewallstreetjournal"></div>
+        <div class="col-md-3"><img src="" alt="accenture"></div>
+        <div class="col-md-3"><img src="" alt="jpmorgan"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3"><img src="" alt="citi"></div>
+        <div class="col-md-3"><img src="" alt="target"></div>
+        <div class="col-md-3"><img src="" alt="atlanticrecords"></div>
+        <div class="col-md-3"><img src="" alt="capitalone"></div>
+      </div>
   </div>
 </div>
 <!-- Body End -->
