--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="about.html">AKPsi</a></li>
+          <li role="presentation"><a href="about.html">Alpha Kappa Psi</a></li>
           <li role="presentation"><a href="alphalambda.html">Alpha Lambda</a></li>
           <li role="presentation"><a href="chapterevents.html">Chapter Events</a></li>
         </ul></li>
