--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Raleway|Roboto+Condensed|Roboto' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,15 +74,15 @@
 <div class="container">
     <p>Alpha Kappa Psi was founded at New York University on October 5, 1904 and later incorporated on May 20, 1905. As an international professional business fraternity, Alpha Kappa Psi aims to educate the public and to further the welfare of its members. With over 240,000 initiated brothers, Alpha Kappa Psi is the largest co-ed professional fraternity with over 300 collegiate chapters in the US, Canada, UK and Hong Kong. The organization is currently headquartered in Indianpolis at the Heritage Center, where the fraternity's staff works. The Heritage Center is also home to the fraternity's own philanthropical organization, the Alpha Kappa Psi Foundation.<br>Fraternity facts:</p>
     <ul>
-      <li>Membership: 240,000 members world-wide</li>
-      <li>Chapters: 300+ chapters</li>
-      <li>Colors: Navy and Gold</li>
-      <li>Symbol: Phoenician Galley</li>
-      <li>Tagline: Shaping people, shaping business</li>
-      <li>Vision: Alpha Kappa Psi is recognized as the premier developer of principled business leaders</li>
-      <li>Core Values: Brotherhood, Knowledge, Integrity, Service, Unity</li>
-      <li>Guiding Principles: Building Brotherhood, Lifelong Learning, High Ethical Standards, Improving Communities, Enhancing the Fraternity for Life</li>
-      <li>Objects of the Fraternity: To further the individual welfare of its members; To foster scientific research in the fields of commerce, accounts, and finance; To educate the public to appareciate and demand higher ideals therein; To promote and advance in institutions of college rank, courses leading to degrees in business administration</li>
+      <li><b>Membership:</b> 240,000 members world-wide</li>
+      <li><b>Chapters:</b> 300+ chapters</li>
+      <li><b>Colors:</b> Navy and Gold</li>
+      <li><b>Symbol:</b> Phoenician Galley</li>
+      <li><b>Tagline:</b> Shaping people, shaping business</li>
+      <li><b>Vision:</b> Alpha Kappa Psi is recognized as the premier developer of principled business leaders</li>
+      <li><b>Core Values:</b> Brotherhood, Knowledge, Integrity, Service, Unity</li>
+      <li><b>Guiding Principles:</b> Building Brotherhood, Lifelong Learning, High Ethical Standards, Improving Communities, Enhancing the Fraternity for Life</li>
+      <li><b>Objects of the Fraternity:</b> To further the individual welfare of its members; To foster scientific research in the fields of commerce, accounts, and finance; To educate the public to appareciate and demand higher ideals therein; To promote and advance in institutions of college rank, courses leading to degrees in business administration</li>
     </ul>
 <!-- Body End -->
 
