--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Raleway' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +28,7 @@
 <!-- Nav Bar Start -->
 <div class="container">
   <div class="row>">
-    <div class="header-image"><img src="http://upload.wikimedia.org/wikipedia/en/0/0d/Akpsi-coa.png" alt="" width="50" height="80" class="img-responsive"></div>
+    <div class="header-image"><img src="http://upload.wikimedia.org/wikipedia/en/0/0d/Akpsi-coa.png" align="center" alt="" width="50" height="80" class="img-responsive"></div>
     <div class="header">Alpha Kappa Psi</div>
     <div class="subheader">Alpha Lambda | Washington University in St. Louis</div>
 
